kubernetes/apps/media/prowlarr/ingress.yaml
# Kapitel 19: prowlarr im Tailnet unter https://prowlarr.<tailnet>.ts.net
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: prowlarr
      port:
        number: 9696
  tls:
    - hosts:
        - prowlarr
